--- a/doc/tp2.tex
+++ b/doc/tp2.tex
@@ -13,6 +13,28 @@
 \usepackage{amsmath}
 \usepackage{ragged2e}
 
+\usepackage{color}
+\usepackage{listings}
+\lstset{ %
+basicstyle=\footnotesize,       % the size of the fonts that are used for the code
+numbers=none,                   % where to put the line-numbers
+numberstyle=\footnotesize,      % the size of the fonts that are used for the line-numbers
+stepnumber=1,                   % the step between two line-numbers. If it is 1 each line will be numbered
+numbersep=10pt,                  % how far the line-numbers are from the code
+backgroundcolor=\color{white},  % choose the background color. You must add \usepackage{color}
+showspaces=false,               % show spaces adding particular underscores
+showstringspaces=false,         % underline spaces within strings
+showtabs=false,                 % show tabs within strings adding particular underscores
+frame=single,           % adds a frame around the code
+tabsize=4,          % sets default tabsize to 2 spaces
+captionpos=b,           % sets the caption-position to bottom
+breaklines=true,        % sets automatic line breaking
+breakatwhitespace=false,    % sets if automatic breaks should only happen at whitespace
+escapeinside={\%*}{*)}          % if you want to add a comment within your code
+}
+\renewcommand{\lstlistingname}{Salida}
+\renewcommand\spanishtablename{Tabla}
+
 \expandafter\def\expandafter\insertshorttitle\expandafter{%
   \insertshorttitle\hfill%
   \insertframenumber\,/\,\inserttotalframenumber}
@@ -39,42 +61,64 @@
 
 \section{Fundamentos}
 
-\subsection{Subsección 1}
+\subsection{Introducción}
 
 \begin{frame}
-\frametitle{Título}
-\framesubtitle{Subtítulo}
+\frametitle{Fundamentos}
+\framesubtitle{Introducción}
 \begin{itemize}
-	\item Lorem ipsum dolor sit amet.
-	\item Lorem ipsum dolor sit amet.
-	\item Lorem ipsum dolor sit amet.
+	\item Autómata Off-Latice de Bandadas de Agentes Autopropulsados.
+	\item Basado en el algoritmo del trabajo de \textit{Novel type of phase transition in a system of self-driven particles}.
+	\item Cada agente será representado por un vector de velocidad cuyo origen estará ubicado en la posición de la partícula para cada tiempo de la simulación $t$.
 \end{itemize}
 \end{frame}
 
-\subsection{Subsección 2}
+\subsection{Variables relevantes}
 
 \begin{frame}
-\frametitle{Título}
-\framesubtitle{Subtítulo}
+\frametitle{Fundamentos}
+\framesubtitle{Variables relevantes}
 \begin{itemize}
-	\item Lorem ipsum dolor sit amet.
-	\item Lorem ipsum dolor sit amet.
-	\item Lorem ipsum dolor sit amet.
+	\item $N$ : cantidad de agentes
+	\item $L$ : longitud del lado del área de simulación
+	\item $v$ : módulo de la velocidad
+	\item $\rho = \frac{N}{L^2}$ : densidad
+	\item $\eta$ : amplitud del ruido
+	\item $v_{a}$ : parámetro de orden
+	\item Nos interesa obtener las curvas de  $v_{a}$ en función de $\eta$ y $\rho$.
 \end{itemize}
 \end{frame}
 
 \section{Implementación}
 
-\subsection{Subsección 1}
+\subsection{Generación de los agentes}
 
 \begin{frame}
-\frametitle{Título}
-\framesubtitle{Subtítulo}
+\frametitle{Implementación}
+\framesubtitle{Generación de los agentes}
 \begin{itemize}
-	\item Lorem ipsum dolor sit amet.
-	\item Lorem ipsum dolor sit amet.
-	\item Lorem ipsum dolor sit amet.
+	\item Posiciones $(x,y)$ aleatorias para cada agente.
+	\item $r_{c} = 0.5$ (radio de interacción de las partículas)
+	\item $v_{cte} = 0.3$
+	\item $\theta_{0} = rand() * 2\pi$ (ángulo inicial aleatorio)
+	\item $\delta_{\theta} = {(rand() * \eta) - \frac{\eta}{2}} $
 \end{itemize}
+\end{frame}
+
+\subsection{Algoritmo}
+
+\begin{frame}[fragile]
+\frametitle{Implementación}
+\framesubtitle{Algoritmo}
+
+\begin{lstlisting}[language=Java, caption = Código]
+public static void main(String[] args) {
+	log.info("Hola Mundo!");
+	(...)
+}
+\end{lstlisting}
+
+
 \end{frame}
 
 \section{Resultados}
@@ -83,21 +127,54 @@
 
 \begin{frame}
 \frametitle{Resultados}
-\framesubtitle{Tabla de la prueba $i = 1$}
+\framesubtitle{Tabla de la prueba $N = 10$}
 \begin{center}
 \begin{table}[h]
 \centering
 \adjustbox{max height=\dimexpr\textheight-3.0cm\relax,
            max width=\textwidth}{
-\begin{tabular}{cccccccccccc}
+\begin{tabular}{ccc}
 \hline
-\textbf{$i$} & \textbf{$t(s)$} \\ \hline
-1&322\\
-2&728\\
+\textbf{$\eta$} & \textbf{$v_{a}$} & \textbf{$t(s)$} \\ \hline
+0.3&0.90837&0\\
+0.6&0.98470&0\\
+0.9&0.70629&0\\
+1.2&0.83263&0\\
+1.5&0.20089&0\\
+1.8&0.30686&0\\
+2.1&0.36970&0\\
+2.4&0.21550&0\\
 \end{tabular}
 
 }
-\caption{Lorem ipsum dolor sit amet.}
+\caption{Datos de la curva de $v_{a}$ para $N = 10$.}
+\end{table}
+\end{center}
+\end{frame}
+
+\begin{frame}
+\frametitle{Resultados}
+\framesubtitle{Tabla de la prueba $N = 50$}
+\begin{center}
+\begin{table}[h]
+\centering
+\adjustbox{max height=\dimexpr\textheight-3.0cm\relax,
+           max width=\textwidth}{
+\begin{tabular}{ccc}
+\hline
+\textbf{$\eta$} & \textbf{$v_{a}$} & \textbf{$t(s)$} \\ \hline
+0.3&0.97092&0\\
+0.6&0.93931&0\\
+0.9&0.68197&0\\
+1.2&0.85446&0\\
+1.5&0.79951&0\\
+1.8&0.73634&0\\
+2.1&0.38437&0\\
+2.4&0.29738&0\\
+\end{tabular}
+
+}
+\caption{Datos de la curva de $v_{a}$ para $N = 50$.}
 \end{table}
 \end{center}
 \end{frame}
@@ -106,7 +183,7 @@
 
 \begin{frame}
 \frametitle{Resultados}
-\framesubtitle{Gráfico de la prueba $i = 1$}
+\framesubtitle{Gráfico}
 \begin{figure}[H]
         \centering
         \includegraphics[width=0.9\textheight]{example-image}
@@ -118,7 +195,7 @@
 
 \begin{frame}
 \frametitle{Resultados}
-\framesubtitle{Animación de la prueba $i = 1$}
+\framesubtitle{Animación de la prueba $N = ?$}
 \begin{figure}[H]
         \centering
         \includegraphics[width=0.9\textheight]{example-image}
