--- a/doc/tp3/tp3.tex
+++ b/doc/tp3/tp3.tex
@@ -276,8 +276,17 @@ public void simulate(double time, double frameRate){
 \begin{figure}[H]
         \centering
         \includegraphics[width=\textwidth]{graphs/velocities.png}
-        \caption{Gráfico de la distribución de velocidades}
+        \caption{Gráfico de la distribución de velocidades en el último tercio de la simulación}
 \end{figure}
+\end{frame}
+
+\begin{frame}
+\frametitle{Resultados}
+\framesubtitle{Gráfico de la trayectoria de la partícula grande}
+  \hfil\hfil\includegraphics[width=5cm]{500v1.png}\hfil\hfil
+    \includegraphics[width=5cm]{500v2.png}\newline
+  \null\hfil\hfil\makebox[5cm]{$|v_{0}| = 0.1 \frac{m}{s}$}
+    \hfil\hfil\makebox[5cm]{$|v_{0}| = 0.5 \frac{m}{s}$}
 \end{frame}
 
 \begin{frame}
@@ -285,8 +294,8 @@ public void simulate(double time, double frameRate){
 \framesubtitle{Gráfico de la trayectoria de la partícula grande}
 \begin{figure}[H]
         \centering
-        \includegraphics[width=0.75\textheight]{example-image-c}
-        \caption{Gráfico de la trayectoria de la partícula grande para las distintas temperaturas}
+        \includegraphics[width=5cm]{500v3.png}
+        \caption{Trayectoria de la partícula grande con $|v_{0}| = 1 \frac{m}{s}$}
 \end{figure}
 \end{frame}
 
@@ -324,9 +333,11 @@ public void simulate(double time, double frameRate){
 \begin{frame}
 \frametitle{Conclusiones}
 \begin{itemize}
-	\item Lorem
-	\item ipsum
-	\item dolor
+	\item Aumentando la energía cinética se puede simular un aumento en la temperatura. $K = n R T$
+	\item Con $N = 1000$ el comportamiento se asemeja a un material viscoso, existiendo un límite definido por las dimensiones del dominio.
+	\item A mayor $N$ la partícula grande se desplaza menos.
+	\item Aumentando la velocidad de las partículas, aumentan la frecuencia de colisión y el tiempo de procesamiento.
+	\item El sistema no se estabiliza ya que todas las fuerzas son conservativas.
 \end{itemize}
 \end{frame}
 
